Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • intel intel
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Issues 711
    • Issues 711
    • List
    • Boards
    • Service Desk
    • Milestones
  • Analytics
    • Analytics
    • Value stream
  • Wiki
    • Wiki
  • Activity
  • Create a new issue
  • Issue Boards
Collapse sidebar
  • drm
  • intelintel
  • Issues
  • #541
Closed
Open
Issue created Oct 22, 2019 by Bugzilla Migration User@bugzilla-migration

[CI][BAT]igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_flush failed with error -22

Submitted by LAKSHMINARAYANA VUDUM @l4kshmi

Assigned to Intel GFX Bugs mailing list

Link to original bug (#112096)

Description

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7143/fi-cfl-8700k/igt@i915_selftest@live_gt_heartbeat.html
(i915_selftest:4816) igt_kmod-WARNING: i915/intel_heartbeat_live_selftests: live_idle_flush failed with error -22
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling always-on
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DC off
(i915_selftest:4816) igt_kmod-WARNING: [drm:gen9_set_dc_state [i915]] Setting DC state from 02 to 00
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling power well 2
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI A/E IO power well
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI B IO power well
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI C IO power well
(i915_selftest:4816) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI D IO power well
(i915_selftest:4816) igt_kmod-WARNING: i915: probe of 0000:00:02.0 failed with error -22
(i915_selftest:4816) igt_kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file ../lib/igt_kmod.c:548:
(i915_selftest:4816) igt_kmod-CRITICAL: Failed assertion: err == 0
(i915_selftest:4816) igt_kmod-CRITICAL: kselftest "i915 igt__20__live_gt_heartbeat=1 live_selftests=-1 disable_display=1 st_filter=" failed: Invalid argument [22]
(i915_selftest:4816) igt_core-INFO: Stack trace:
(i915_selftest:4816) igt_core-INFO: #0 ../lib/igt_core.c:1716 __igt_fail_assert()
(i915_selftest:4816) igt_core-INFO: #1 (moved) [igt_kselftest_execute+0x2e5]
(i915_selftest:4816) igt_core-INFO: #2 ../lib/igt_kmod.c:582 igt_kselftests()
(i915_selftest:4816) igt_core-INFO: #3 (moved) ../tests/i915/i915_selftest.c:43 __real_main29()
(i915_selftest:4816) igt_core-INFO: #4 (moved) ../tests/i915/i915_selftest.c:29 main()
(i915_selftest:4816) igt_core-INFO: #5 (closed) ../csu/libc-start.c:344 __libc_start_main()
(i915_selftest:4816) igt_core-INFO: #6 (closed) [_start+0x2a]
**** END ****
Subtest live_gt_heartbeat: FAIL (0.452s)

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking